# docdoc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PORTS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  forentis-ai-roadmap-addendum.md  pyproject.toml
.windsurf/rules/: project.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_add_notification_subjects.py  0003_add_notification_lists.py  0004_add_audit_and_review.py  0005_projects_and_protocols.py  0006_document_structure_analysis.py  0007_two_phase_pipeline.py  0008_entity_analysis.py  0009_detection_review_decisions.py
app/: main.py
app/api/: deps.py  (+2 more)
config/: config.yaml
docs/: PLAN.md  PRD.md  SCHEMA.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: init_db.sh  seed_demo.py
tests/: conftest.py  test_api.py  test_audit_log.py  test_cataloger.py  test_classifier.py  test_constants.py  test_csv_reader.py  test_dashboard.py  test_deduplicator.py  test_density.py  test_deny_list.py  test_detection_review.py  test_detection_tuning.py  test_discovery.py  test_document_understanding.py  test_docx_reader.py  test_email_sender.py  test_entity_resolver.py  test_excel_reader.py  test_export.py  test_health.py  test_html_email_parquet_readers.py  test_jobs_management.py  test_layer1.py  test_layer2_layer3.py  test_list_builder.py  test_llm.py  test_logging.py  test_normalization.py  test_ocr.py  test_onset.py  test_pdf_reader.py  test_phase3_e2e.py  test_phase4_e2e.py  test_policies.py  test_print_renderer.py  test_protocols.py  test_queue_manager.py  test_readers.py  test_recognizer_filtering.py  (+10 more)
(+123 files in other folders)
