[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docdoc"
version = "0.1.0"
description = "Offline PII breach analysis API skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.4,<3.0",
  "cryptography>=42.0,<43.0",
  "pymupdf>=1.24,<2.0",
  "pdfplumber>=0.11,<1.0",
  "python-docx>=1.1,<2.0",
  "pandas>=2.2,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "pyarrow>=16.0,<19.0",
  "presidio-analyzer>=2.2,<3.0",
  "presidio-anonymizer>=2.2,<3.0",
  "spacy>=3.7,<4.0",
  "paddleocr>=2.7,<3.0",
  "phonenumbers>=8.13,<9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
